--- a/Alllive/Views/Navigation/StartMeeting.cshtml
+++ b/Alllive/Views/Navigation/StartMeeting.cshtml
@@ -1,7 +1,54 @@
 ﻿
+@model IEnumerable<Alllive.Models.UserScheduleResult>
 @{
-    ViewBag.Title = "StartMeeting";
+    ViewBag.Title = "Start Meeting";
 }
 
-<h2>StartMeeting</h2>
+<h2>Schedule</h2>
+@if (Model != null)
+{
+    foreach (var item in Model)
+    {
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <!--<b>@item.SessionID</b>-->
+                    <b>@item.Date.ToString("MM/dd/yyyy")</b>
+                </div>
+                <div class="col">
+                    <b>@item.SessionName</b>
+                </div>
+                <div class="col">
 
+                </div>
+                <div class="col">
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-8">
+                    <b>@item.Description</b>
+                </div>
+                <div class="col-sm-4">
+                    @*@item.StartTime.Value.ToShortDateString()
+                        -
+                        @item.EndTime.Value.ToShortDateString()*@
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <a href=@item.MeetingLink target="_blank">Click to Start Meeting</a>
+                </div>
+               
+
+            </div>
+        </div>
+        <hr />
+    }
+}
+else
+{
+    <div>You have nothing scheduled yet</div>
+
+
+}
