--- a/Alllive/Views/Navigation/SearchResults.cshtml
+++ b/Alllive/Views/Navigation/SearchResults.cshtml
@@ -4,15 +4,25 @@
     @foreach (var tp in Model)
     {
     <div class="list-group-item">
-        <img />
-        <h3>@tp.User.FirstName @tp.User.LastName</h3>
+        @if (tp.TutorProfile.Photo!=null) 
+        { 
+        <img width="70" height="70" src="@tp.TutorProfile.Photo"/>
+        }
+        else
+        {
+            <img width="70" height="70" src="~/Images/silhoutte.png"/>
+        }
+    <div class="list-group-item-text">
+        <h4>@tp.User.FirstName @tp.User.LastName</h4>
         <p>@tp.TutorProfile.Bio</p>
         <h5>Availability</h5>
+
 
         @if (tp.TutorProfile.Sunday)
         {
             @Html.Label("Sunday:")
             @tp.TutorProfile.SundayStart
+            <span> - </span>
             @tp.TutorProfile.SundayEnd
         }
         @if (tp.TutorProfile.Monday)
@@ -20,6 +30,7 @@
             @Html.Label("Monday:")
 
             @tp.TutorProfile.MondayStart
+            <span> - </span>
             @tp.TutorProfile.MondayEnd
         }
         @if (tp.TutorProfile.Tuesday)
@@ -27,6 +38,7 @@
             @Html.Label("Tuesday:")
 
             @tp.TutorProfile.TuesdayStart
+            <span> - </span>
             @tp.TutorProfile.TuesdayEnd
         }
         @if (tp.TutorProfile.Wednesday)
@@ -34,6 +46,7 @@
             @Html.Label("Wednesday:")
 
             @tp.TutorProfile.WednesdayStart
+            <span> - </span>
             @tp.TutorProfile.WednesdayEnd
         }
         @if (tp.TutorProfile.Thursday)
@@ -41,6 +54,7 @@
             @Html.Label("Thursday:")
 
             @tp.TutorProfile.ThursdayStart
+            <span> - </span>
             @tp.TutorProfile.ThursdayEnd
         }
         @if (tp.TutorProfile.Friday)
@@ -48,6 +62,7 @@
             @Html.Label("Friday:")
 
             @tp.TutorProfile.FridayStart
+            <span> - </span>
             @tp.TutorProfile.FridayEnd
         }
         @if (tp.TutorProfile.Saturday)
@@ -55,8 +70,10 @@
             @Html.Label("Saturday:")
 
             @tp.TutorProfile.SaturdayStart
+            <span> - </span>
             @tp.TutorProfile.SaturdayEnd
         }
+    </div>
     </div>
     }
    
